[tool.poetry]
name = "huron_driver"
version = "0.1.0"
description = "Low-level driver for physical HURON"
authors = ["wpi-huron"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
