[tool.poetry]
name = "huron_driver"
version = "0.1.0"
description = "Low-level driver for physical HURON"
authors = ["wpi-huron"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
overrides = "^7.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"
lark = "^1.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
